fix(byline): set max-width on headshots to avoid text overlapping

--- a/src/components/pages/blog/byline.module.scss
+++ b/src/components/pages/blog/byline.module.scss
@@ -11,7 +11,7 @@
     display: inline-flex;
     align-items: flex-start;
     img {
-      width: 47px;
+      max-width: 47px;
       border-radius: 50%;
       margin-right: -5px;
     }
